QQuickStateGroup: Check "when" binding for context before evaluating

If it doesn't have a valid context evaluate() will crash. It's unclear
how this is triggered, so we cannot easily construct a test.

Fixes: QTBUG-102729
Change-Id: I9f08d43bd41e657870fa2f8cf23460570fd9bcee
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 3fb46f78cfa4ab753e1d6b066528d5544d37e23d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>